--- a/hw-6 (weatherstack)/style.scss
+++ b/hw-6 (weatherstack)/style.scss
@@ -43,15 +43,15 @@ header {
 
 main {
   width: 40vw;
-  margin: 4vw auto;
+  margin: 2vw auto;
   background-image: url(img/2868031.jpg);
   background-position: center center;
   background-size: cover;
   box-sizing: border-box;
-  box-shadow: 5px 7px 7px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0.3vw 0.3vw 0.3vw 0.1vw rgba(0, 0, 0, 0.2);
   .query {
-    margin: 0 0 6vw;
-    padding: 2vw 2vw 0;
+    margin: 0 0 4vw;
+    padding: 1vw 2vw 0;
     font-size: 3vw;
     font-weight: 600;
     color: #fff;
@@ -88,7 +88,7 @@ main {
     height: 10vw;
     display: flex;
     justify-content: space-around;
-    margin-top: 10vw;
+    margin-top: 4vw;
     background-color: rgba(255, 255, 255, 1);
     color: #3f3f3f;
     .weather-point {
