--- a/hw-6 (weatherstack)/style.css
+++ b/hw-6 (weatherstack)/style.css
@@ -53,19 +53,19 @@ header button:hover {
 
 main {
   width: 40vw;
-  margin: 4vw auto;
+  margin: 2vw auto;
   background-image: url(img/2868031.jpg);
   background-position: center center;
   background-size: cover;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-box-shadow: 5px 7px 7px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 5px 7px 7px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0.3vw 0.3vw 0.3vw 0.1vw rgba(0, 0, 0, 0.2);
+          box-shadow: 0.3vw 0.3vw 0.3vw 0.1vw rgba(0, 0, 0, 0.2);
 }
 
 main .query {
-  margin: 0 0 6vw;
-  padding: 2vw 2vw 0;
+  margin: 0 0 4vw;
+  padding: 1vw 2vw 0;
   font-size: 3vw;
   font-weight: 600;
   color: #fff;
@@ -118,7 +118,7 @@ main .full-info {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin-top: 10vw;
+  margin-top: 4vw;
   background-color: white;
   color: #3f3f3f;
 }
