--- a/hw-6 (weatherstack)/style.css
+++ b/hw-6 (weatherstack)/style.css
@@ -6,7 +6,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-header input, header button {
+header form input, header form button {
   width: 10vw;
   height: 0.7vw;
   margin: 0 3vw;
@@ -19,17 +19,20 @@ header input, header button {
 }
 
 header {
+  padding: 0.8vw;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+header form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0.8vw;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
-header button {
+header form button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,7 +47,7 @@ header button {
   cursor: pointer;
 }
 
-header button:hover {
+header form button:hover {
   background-color: #b6c7ff;
   color: #3f3f3f;
   -webkit-transition: 0.5s;
