--- a/hw-6 (weatherstack)/style.scss
+++ b/hw-6 (weatherstack)/style.scss
@@ -18,25 +18,27 @@ body {
   outline: none;
 }
 header {
-  display: flex;
-  justify-content: center;
   padding: 0.8vw;
   background-color: rgba(0, 0, 0, 0.5);
-  input {
-    @extend %stack-input;
-  }
-  button {
-    @extend %stack-input;
+  form {
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-weight: 600;
-    height: 2.7vw;
-    cursor: pointer;
-    &:hover {
-      background-color: #b6c7ff;
-      color: #3f3f3f;
-      transition: 0.5s;
+    input {
+      @extend %stack-input;
+    }
+    button {
+      @extend %stack-input;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      height: 2.7vw;
+      cursor: pointer;
+      &:hover {
+        background-color: #b6c7ff;
+        color: #3f3f3f;
+        transition: 0.5s;
+      }
     }
   }
 }
